fix(log): Catch up getting logs