@@ -35,10 +35,8 @@ dependencies {
     implementation group: 'org.ocpsoft.prettytime', name: 'prettytime', version: '4.0.2.Final'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.4.10"
 
-    testImplementation 'org.codehaus.groovy:groovy-all:2.4.17'
-    testImplementation(group: 'org.spockframework', name: 'spock-core', version: '1.3-groovy-2.4') {
-        exclude group: 'org.codehaus.groovy', module: 'groovy-all'
-    }
+    testImplementation 'io.kotest:kotest-runner-junit5:4.4.3'
+    testImplementation 'io.kotest:kotest-assertions-core:4.4.3'
 
 }
 
@@ -104,7 +102,16 @@ compileKotlin {
     }
 }
 
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
+
 publishPlugin {
     token = System.getenv("ORG_GRADLE_PROJECT_intellijPublishToken")
 }
 
+runIde {
+    jvmArgs '--add-exports', 'java.base/jdk.internal.vm=ALL-UNNAMED'
+}
